--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,7 +8,7 @@ on:
 env:
   OIDC_ARN: arn:aws:iam::113713103169:role/GitHubActionsOIDC
   ECR_REGISTRY: 113713103169.dkr.ecr.ap-northeast-1.amazonaws.com
-  ECR_REPOSITORY: go-simple-server
+  ECR_REPOSITORY: go-for-api
   APP: go-simple-server
 
 permissions:
